--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,7 @@
         "build-js": "react-scripts build",
         "build": "npm-run-all build-css build-js",
         "lint": "eslint src",
-        "test": "react-scripts test --env=jsdom",
+        "test": "react-scripts test --env=jsdom --watchAll",
         "eject": "react-scripts eject"
     },
     "devDependencies": {
