--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,11 +29,15 @@
         "eslint": "5.6.0",
         "eslint-config-synacor": "^2.1.0",
         "eslint-plugin-react": "^7.11.1",
+        "eslint-plugin-import": "2.14.0",
+        "eslint-plugin-flowtype": "2.50.3",
+        "eslint-plugin-jsx-a11y": "6.1.1",
         "jest": "23.6.0",
         "jest-cli": "^23.5.0",
         "node-sass-chokidar": "^1.3.3",
         "npm-run-all": "^4.1.3",
         "react-scripts": "^2.0.3",
+        "webpack": "4.19.1",
         "why-did-you-update": "^0.1.1"
     },
     "eslintIgnore": [
