Add e2e tests with BrowserStack

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,8 @@ db.sqlite3
 config/overrides/settings.py
 venv/
 **/__init__.py
+
+# Tests
+selenium-debug.log
+tests_output/*
+tests-e2e/browserstack.credentials.js
