--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Django==2.1.2
 pytz==2017.3
 mandrill==1.0.57
-requests==2.2.1
+requests>=2.20.0
 
 # Additionnals requirements
 -r additional_requirements.txt
