--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "proxy": "http://127.0.0.1:8000/",
     "dependencies": {
+        "babel-polyfill": "^6.26.0",
         "leaflet.markercluster": "^1.4.0",
         "mapbox.js": "^3.1.1",
         "react": "^16.4.2",
@@ -47,7 +48,7 @@
     "browserslist": [
         ">0.2%",
         "not dead",
-        "not ie <= 11",
+        "not ie < 11",
         "not op_mini all"
     ]
 }
