--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,11 +5,12 @@
     "proxy": "http://127.0.0.1:8000/",
     "dependencies": {
         "babel-polyfill": "^6.26.0",
-        "leaflet.markercluster": "^1.4.0",
+        "eslint": "^5.12.0",
+        "leaflet.markercluster": "^1.4.1",
         "mapbox.js": "^3.1.1",
-        "react": "^16.4.2",
-        "react-dom": "^16.4.2",
-        "react-ga": "^2.5.3",
+        "react": "^16.8.3",
+        "react-dom": "^16.8.3",
+        "react-ga": "^2.5.7",
         "react-router-dom": "^4.3.1",
         "redux": "^3.7.2"
     },
@@ -27,18 +28,17 @@
     "devDependencies": {
         "babel-eslint": "^9.0.0",
         "babel-jest": "^23.6.0",
-        "eslint": "5.6.0",
         "eslint-config-synacor": "^2.1.0",
-        "eslint-plugin-react": "^7.11.1",
-        "eslint-plugin-import": "2.14.0",
         "eslint-plugin-flowtype": "2.50.3",
+        "eslint-plugin-import": "2.14.0",
         "eslint-plugin-jsx-a11y": "6.1.1",
+        "eslint-plugin-react": "^7.12.4",
         "jest": "23.6.0",
-        "jest-cli": "^23.5.0",
+        "jest-cli": "^23.6.0",
         "node-sass-chokidar": "^1.3.4",
-        "npm-run-all": "^4.1.3",
-        "react-scripts": "^2.0.3",
-        "webpack": "4.19.1",
+        "npm-run-all": "^4.1.5",
+        "react-scripts": "^2.1.5",
+        "webpack": "^4.28.3",
         "why-did-you-update": "^0.1.1"
     },
     "eslintIgnore": [
