--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
         "react": "^16.8.3",
         "react-dom": "^16.8.3",
         "react-ga": "^2.5.7",
+        "react-redux": "^6.0.1",
         "redux": "^3.7.2"
     },
     "scripts": {
