--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,7 +39,7 @@
         "node-sass-chokidar": "^1.3.4",
         "npm-run-all": "^4.1.5",
         "react-scripts": "^2.1.5",
-        "webpack": "^4.28.3",
+        "webpack": "4.28.3",
         "why-did-you-update": "^0.1.1"
     },
     "eslintIgnore": [
