--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
     "dependencies": {
         "@reach/router": "^1.2.1",
         "babel-polyfill": "^6.26.0",
-        "leaflet.markercluster": "^1.4.1",
+        "leaflet.markercluster": "1.4.0",
         "mapbox.js": "^3.1.1",
         "react": "^16.8.3",
         "react-dom": "^16.8.3",
