--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # IDE
 .vscode
 
+# Mac Os
+.DS_Store
 
 # React frontend
 **/*.css
@@ -8,7 +10,6 @@ frontend/node_modules
 frontend/coverage
 frontend/build
 
-frontend/.DS_Store
 frontend/npm-debug.log*
 frontend/yarn-debug.log*
 frontend/yarn-error.log*
