--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,15 @@
     "version": "0.1.0",
     "private": true,
     "proxy": "http://127.0.0.1:8000/",
+    "engineStrict": true,
+    "engines": {
+        "node": ">=9.0.0 <12.0.0"
+    },
     "dependencies": {
         "@marvelapp/react-ab-test": "^2.2.0",
         "@reach/router": "^1.2.1",
         "babel-polyfill": "^6.26.0",
+        "create-react-app": "^3.0.1",
         "leaflet.markercluster": "1.4.0",
         "mapbox.js": "3.1.1",
         "react": "^16.8.3",
