--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,7 +30,8 @@
         "build-js": "react-scripts build",
         "build": "./node_modules/.bin/npm-run-all build-css build-js",
         "lint": "eslint src",
-        "test": "react-scripts test --env=jsdom --watchAll",
+        "unit-tests": "react-scripts test --env=jsdom --watchAll",
+        "ci-unit-tests": "react-scripts test --env=jsdom --no-watch",
         "eject": "react-scripts eject"
     },
     "devDependencies": {
