~ Run Browserstack tests locally ~
End-to-end tests were executed with the production and the staging url!
This means it was not testing our current commit but code that has already been
shipped...
This commit fixes this issue by running tests on a local host.
It also reorganizes end-to-end tests moving them to /frontend.

--- a/.gitignore
+++ b/.gitignore
@@ -24,5 +24,7 @@ venv/
 
 # Tests
 selenium-debug.log
-tests_output/*
-tests-e2e/browserstack.credentials.js
+frontend/tests_output/*
+frontend/tests-e2e/browserstack.credentials.js
+frontend/local.log
+nohup.out
