--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,11 @@
         "node": ">=9.0.0 <12.0.0"
     },
     "dependencies": {
-        "babel-core": "7.0.0-bridge.0",
         "@marvelapp/react-ab-test": "^2.2.0",
         "@reach/router": "^1.2.1",
+        "babel-core": "7.0.0-bridge.0",
         "babel-polyfill": "^6.26.0",
+        "browserstack-local": "^1.4.2",
         "create-react-app": "^3.0.1",
         "leaflet.markercluster": "1.4.0",
         "mapbox.js": "3.1.1",
