Revert "Merge pull request #105 from StartupsPoleEmploi/lexoyo/fix_linter"
This reverts commit 4e70602c50a48846b2663a2aac7728174d6cf90f, reversing
changes made to be2105338a2cfe80938224b5453e2367b4ebfbec.

--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -14,9 +14,7 @@
         "indent": [2, 4, {"SwitchCase": 1}],
         "react/prefer-stateless-function": 0,
         "react/sort-comp": 0,
-        "react/jsx-indent-props": 0,
-        "brace-style": 0,
-        "no-irregular-whitespace": 0,
+        "brace-style": [2, "1tbs", { "allowSingleLine": true }],
         "comma-dangle": ["error", "only-multiline"]
     }
 }
