--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,6 @@
     },
     "dependencies": {
         "@marvelapp/react-ab-test": "^2.3.0",
-        "@reach/router": "^1.3.4",
         "babel-core": "7.0.0-bridge.0",
         "babel-polyfill": "^6.26.0",
         "browserstack-local": "^1.4.5",
@@ -22,6 +21,7 @@
         "react-dom": "^16.13.1",
         "react-ga": "^3.1.1",
         "react-redux": "^7.2.0",
+        "react-router-dom": "^5.2.0",
         "redux": "^4.0.5"
     },
     "scripts": {
@@ -39,8 +39,7 @@
     "devDependencies": {
         "node-sass-chokidar": "^1.5.0",
         "npm-run-all": "^4.1.5",
-        "react-scripts": "^3.4.1",
-        "why-did-you-update": "^1.0.8"
+        "react-scripts": "^3.4.1"
     },
     "eslintIgnore": [
         "build/*",
